--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en" dir="rtl">
+
 <head>
   <meta charset="utf-8">
   <title>Theislamicnation.com</title>
@@ -10,7 +11,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
+
   <app-root></app-root>
+  <iframe style="display:none;" src="" id="iframeAccount"></iframe>
+
+<script>
+
+
+</script>
 </body>
+
 </html>
