--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en" dir="rtl">
+<!-- <html lang="en" dir="rtl"> -->
+  <html>
 
 <head>
   <meta charset="utf-8">
@@ -9,12 +10,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
   <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 </head>
 
 <body>
   <app-root></app-root>
-  <iframe style="display:none;" src="" id="iframeAccount"></iframe>
 <script>
 
 
